# jarvis

./: .env.template  .gitignore  compose.yml  pyproject.toml
scripts/: generate-key.sh
src/: api_service.py  bot_service.py  run.sh
src/common/: bot.py  commands.py  logger.py  models.py  schema.py  settings.py
src/core/: bot.py  commands.py  logger.py  settings.py
